# ChangeLog for sys-libs/pam
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/pam/ChangeLog,v 1.73 2005/05/16 00:50:12 flameeyes Exp $

  16 May 2005; Diego Pettenò <flameeyes@gentoo.org> pam-0.77.ebuild,
  pam-0.77-r1.ebuild, pam-0.77-r2.ebuild, pam-0.77-r3.ebuild,
  pam-0.77-r4.ebuild, pam-0.77-r6.ebuild, pam-0.77-r7.ebuild,
  pam-0.77-r8.ebuild, pam-0.78.ebuild, pam-0.78-r1.ebuild:
  Converted to use toolchain-funcs instead of gcc eclass.

  28 Apr 2005; Martin Schlemmer <azarah@gentoo.org> pam-0.77.ebuild,
  pam-0.77-r1.ebuild, pam-0.77-r2.ebuild, pam-0.77-r3.ebuild,
  pam-0.77-r4.ebuild, pam-0.77-r6.ebuild, pam-0.77-r7.ebuild,
  pam-0.77-r8.ebuild:
  Only add the virtual to the >=0.78 series, as we want to use it for the
  'include' directive to have bsd support.

  28 Apr 2005; Martin Schlemmer <azarah@gentoo.org> pam-0.77.ebuild,
  pam-0.77-r1.ebuild, pam-0.77-r2.ebuild, pam-0.77-r3.ebuild,
  pam-0.77-r4.ebuild, pam-0.77-r6.ebuild, pam-0.77-r7.ebuild,
  pam-0.77-r8.ebuild, pam-0.78.ebuild, pam-0.78-r1.ebuild,
  pam-0.78-r2.ebuild:
  Add virtual.

  25 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org> pam-0.78-r2.ebuild:
  Use proper toolchain compiler.

  23 Mar 2005; Martin Schlemmer <azarah@gentoo.org> pam-0.78-r2.ebuild:
  Do not care about sandbox in /usr check for module dependencies. Add message
  to warn about restarting sshd.

  13 Mar 2005; Martin Schlemmer <azarah@gentoo.org> pam-0.78-r2.ebuild:
  Tweak dependency test to hopefully fix bug #84836

  09 Mar 2005; Martin Schlemmer <azarah@gentoo.org> pam-0.78-r2.ebuild:
  Do not check for gcc dir when we check if modules are link to libs in /usr.

*pam-0.78-r2 (09 Mar 2005)

  09 Mar 2005; Martin Schlemmer <azarah@gentoo.org> +pam-0.78-r2.ebuild:
  Compile glib internal to fix the -fPIC issues.

*pam-0.78-r1 (07 Mar 2005)

  07 Mar 2005; Martin Schlemmer <azarah@gentoo.org> +pam-0.78-r1.ebuild: