@@ -1,6 +1,10 @@
 # ChangeLog for sys-libs/pam
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/pam/ChangeLog,v 1.73 2005/05/16 00:50:12 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/pam/ChangeLog,v 1.74 2005/05/20 12:24:54 flameeyes Exp $
+
+  20 May 2005; Diego Pettenò <flameeyes@gentoo.org> pam-0.78.ebuild,
+  pam-0.78-r1.ebuild, pam-0.78-r2.ebuild:
+  Use new pam eclass for new dopamd/newpamd functions. Fixes #86823.
 
   16 May 2005; Diego Pettenò <flameeyes@gentoo.org> pam-0.77.ebuild,
   pam-0.77-r1.ebuild, pam-0.77-r2.ebuild, pam-0.77-r3.ebuild,
